# Summer-2026-Chess-Challenge

./: .gitignore  CMakeLists.txt  README.md  run.sh
docs/: FTXUI_GUIDE.md  devlog_0.md  devlog_1.md  devlog_2.md
include/: bishopPiece.hpp  board.hpp  common.hpp  kingPiece.hpp  knightPiece.hpp  nullPiece.hpp  pawnPiece.hpp  piece.hpp  queenPiece.hpp  rookPiece.hpp
src/: bishopPiece.cpp  board.cpp  common.cpp  kingPiece.cpp  knightPiece.cpp  main.cpp  nullPiece.cpp  pawnPiece.cpp  piece.cpp  queenPiece.cpp  rookPiece.cpp
tests/: hello_gtest.cpp  tests.md
